client/assets/styles.scss
$primary: #0f05a2;
$danger: #902549;

:root {
	font: min(16px, 3.5vw) pt;
	scroll-behavior: smooth;
}

@font-face {
	font-family: pt;
	font-weight: normal;
	src: url("https://acryps.com/fonts/pt/regular");
}

@font-face {
	font-family: pt;
	font-weight: bold;
	src: url("https://acryps.com/fonts/pt/bold");
}

body {
	padding: 0;
	margin: 0;
}

ui-nav {
	display: block;
	padding: 1rem;

	position: sticky;
	top: 0;
	left: 0;
	right: 0;
	z-index: 100;

	line-height: 1;
	font-weight: bold;
	color: $primary;
	background: #fff;
	border-bottom: 1px solid #000;

	image-rendering: pixelated;
}

ui-filters {
	display: block;
	border-bottom: 1px solid #000;

	overflow-x: auto;
	overflow-y: hidden;

	ui-filter {
		position: relative;
		border-right: 1px solid #000;
		line-height: 1;

		&[ui-active] {
			font-weight: bold;
			font-style: italic;
		}

		select {
			padding: 0.75rem 1rem;
			appearance: none;
			-webkit-appearance: none;

			outline: none;
			font: inherit;
			color: inherit;
			border: none;
			background: transparent;
		}
	}
}

ui-content {
	display: flex;
	flex-direction: column;

	ui-issues {
		display: block;
		padding: 0.25rem 1rem;

		font-size: 0.75rem;
		background: $danger;
		color: #fff;

		&:empty {
			display: none;
		}

		ui-issue {
			display: block;
		}
	}

	ui-month {
		display: block;
		padding: 0.5rem 1rem;
		height: 100%;

		background: #000;
		color: #fff;
	}

	ui-day {
		padding: 0.5rem 0;
		border-bottom: 2px solid #000;
		width: 100%;
		overflow: hidden;

		ui-date {
			display: block;
			padding: 0.5rem 1rem;

			font-weight: bold;

			ui-today {
				margin-right: 0.75rem;

				background: #000;
				color: #fff;
			}
		}

		ui-event {
			display: block;
			padding: 1rem;

			background: #fff;

			&:not(:first-of-type) {
				background-image: var(--gradient);
				background-size: 1rem 1px;
				background-repeat: repeat-x;
			}

			&[ui-sold-out] {
				color: #666;

				img {
					opacity: 0.5;
				}
			}

			&[ui-highlight] {
				padding: 0.5rem;

				border: 0.5rem solid yellow;
			}
			
			img {
				float: left;

				width: 4rem;
				max-height: 3rem;

				margin-right: 0.5rem;
				margin-bottom: 0.5rem;

				object-fit: cover;
			}

			ui-tagline {
				display: flex;
				margin-bottom: 0.25rem;

				font-size: 0.75rem;

				ui-host {
					flex-grow: 1;

					ui-name {
						display: inline-block;

						font-weight: bold;
						margin-right: 0.5rem;
					}
				}

				ui-ticket-details {
					flex-shrink: 0;

					ui-sold-out {
						font-style: italic;
					}
				}
			}

			> ui-name {
				display: block;
				margin-bottom: 0.5rem;
			}

			ui-links {
				display: block;
				font-size: 0.75rem;

				a {
					display: inline-block;
					padding: 0.125rem 0.5rem;

					color: inherit;
					background: #fff;
					border: 1px solid currentColor;

					&:not(:last-child) {
						margin-right: 0.5rem;
					}

					&:hover {
						background: #000;
						color: #fff;
					}
				}
			}
		}
	}

	ui-none {
		display: block;
		padding: 3rem 1rem;
		background: $danger;
		color: #fff;
	}

	ui-about {
		padding: 5rem 1rem;

		background: #fff;

		ui-host {
			display: block;
			padding: 0.5rem 0;

			&:first-child {
				margin-top: 3rem;
			}

			&[ui-offline] {
				color: $danger;
			}

			ui-name {
				font-weight: bold;
			}
		}
	}
}

@media (min-width: 500px) {
	ui-page {
		position: fixed;
		top: 0;
		left: 0;
		right: 0;
		bottom: 0;

		display: flex;
		flex-direction: column;

		ui-nav {
			flex-shrink: 0;
		}

		ui-events {
			flex-grow: 1;
			height: 100%;
			overflow: hidden;
			padding-right: 0;

			display: flex;
			flex-direction: column;

			ui-filters {
				flex-shrink: 0;
			}

			ui-content {
				flex-grow: 1;
				padding: 0.5rem;
				height: 100%;

				background-image: linear-gradient(45deg, #fff 75%, #000 100%);
				background-size: 0.25rem 0.25rem;
				background-position: 0.125rem 0.125rem;

				flex-direction: column;
				flex-wrap: wrap;
				overflow-y: auto;
		
				ui-issues {
					display: flex;
					padding: 1rem 0.25rem;
					align-items: flex-start;
		
					writing-mode: vertical-rl;
				}

				ui-month,
				ui-day:not(:last-child),
				ui-none,
				ui-issues,
				ui-about {
					border: 1px solid #000;
					margin: 0.5rem;
				}

				ui-issues {
					height: 100%;
				}
		
				ui-month {
					padding: 1rem 0.5rem;
		
					writing-mode: vertical-rl;
				}

				ui-day {
					width: 400px;
					min-height: calc(100% / 3 - 1rem - 1px);
					max-height: calc(100% - 2rem);
					flex-shrink: 0;

					overflow-x: hidden;
					overflow-y: auto;

					background: #fff;

					&[ui-today] {
						margin: 0.25rem;
						border-width: calc(0.25rem + 1px);
					}
				}
		
				ui-none {
					width: 600px;
					flex-shrink: 0;
					padding: 3rem;
				}
		
				ui-about {
					width: 800px;
					flex-shrink: 0;
				}
			}
		}
	}
}

